# aiomax

./: README.md  pyproject.toml
.github/workflows/: tests.yml
aiomax/: api.py  bot.py  buttons.py  classes.py  constants.py  enums.py  exceptions.py  filters.py  fsm.py  router.py  types.py  utils.py
docs/: FSM.md  Бот.md  Декораторы.md  Клавиатуры.md  Переход с версии 2.x на 3.x.md  Примеры.md  Роутеры.md  Типы.md  Фильтры.md
tests/: conftest.py  test_bot_auth.py  test_bot_http_methods.py  test_bot_init_session.py
