[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-git-versioning>=2.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
lint = [
    "ruff"
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "faker",
]

[tool.ruff]
include = [
    "aiomax/**.py",
    "pyproject.toml",
]
fix = true
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "UP",
  "SIM",
  "ASYNC"
]

ignore = ["UP037"]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project]
name = "aiomax"
dependencies = [
    "aiohttp",
    "aiofiles"
]
dynamic = ["version"]
requires-python = ">= 3.9"
authors = [
    {name = "mbutsk", email = "mbutsk@icloud.com"},
    {name = "moontr3", email = "contact@moontr3.ru"}
]
description = "Asynchronous framework for Max Bot API"
readme = "pypi-description.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
    "bot",
    "api",
    "asyncio",
    "max"
]
classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]

[project.urls]
Docs = "https://github.com/dpnspn/aiomax/wiki"
"Source code" = "https://github.com/dpnspn/aiomax"

[tool.setuptools-git-versioning]
enabled = true
version_file = ".version"

[tool.pytest.ini_options]
pythonpath = [ "." ]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "tests",
]
filterwarnings = [
  "error",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-5.5s [%(name)s] %(message)s"
addopts = [
  "--import-mode=importlib",
  "--strict-markers",
]
